--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/states/NPCNormal.java=UTF-8
+encoding//src/tests/ListenerTest.java=UTF-8
 encoding//src/tests/NPCTest.java=UTF-8
